[tool.poetry]
name = "arcaflow-plugin-utilities"
version = "0.2.0"
description = ""
authors = ["Harshith-umesh <harshith.umesh.nat@gmail.com>"]
license = "Apache-2.0+GPL-2.0-only"
readme = "README.md"

packages = [
   { include="utilities_plugin.py", from="./arcaflow_plugin_utilities"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "0.10.3"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^2.0.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
